Transaccion post de un proyecto academico
